--- a/public/business.html
+++ b/public/business.html
@@ -39,9 +39,16 @@
             <li><a href="residential.html">Residential</a></li>
             <li><a href="business.html" class="active">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
+            <li><a href="blog.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
-            <li><a href="speedtest.html">Speed Test</a></li>
+                        <li class="dropdown-container">
+                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
+                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
@@ -152,6 +159,8 @@
                             <li><i class="fa-solid fa-check"></i> <strong>Symmetrical Speeds</strong> up to 10 Gbps</li>
                             <li><i class="fa-solid fa-check"></i> <strong>SLA</strong> (Service Level Agreements) Available</li>
                             <li><i class="fa-solid fa-check"></i> <strong>Local Support</strong> & Priority Repair</li>
+                            <li><i class="fa-solid fa-check"></i> <strong>In-House IT Options</strong> by SimplifyTech</li>
+                            <li><i class="fa-solid fa-check"></i> <strong>Custom IP Phone Solutions</strong> by APG</li>
                         </ul>
                     </div>
 
