--- a/public/footer/acceptable-user-policy.html
+++ b/public/footer/acceptable-user-policy.html
@@ -7,6 +7,7 @@
     <!-- Corrected Paths -->
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="stylesheet" href="../assets/css/components.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .legal-content { max-width: 800px; margin: 0 auto; padding: 60px 20px; }
         .legal-content h1 { font-family: var(--font-heading); font-size: 2.5rem; margin-bottom: 10px; color: var(--npt-black); }
@@ -29,7 +30,18 @@
             <li><a href="../builders.html">Builders</a></li>
             <li><a href="../about.html">About</a></li>
             <li><a href="../support.html">Support</a></li>
+            <li><a href="../speedtest.html">Speed Test</a></li>
+
+             <!-- Bill Pay Dropdown -->
+             <li class="dropdown-container">
+                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
+                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
+                </ul>
+            </li>
         </ul>
+        <div class="mobile-menu-btn">☰</div>
     </nav>
 
     <main class="legal-content">
