--- a/public/residential.html
+++ b/public/residential.html
@@ -36,12 +36,21 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html" class="active">Business</a></li>
+            <li><a href="residential.html" class="active">Residential</a></li>
+            <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
+            <li><a href="blog.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
-            <li><a href="speedtest.html">Speed Test</a></li>
+            
+             <!-- Bill Pay Dropdown -->
+             <li class="dropdown-container">
+                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
+                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
@@ -133,8 +142,15 @@
 
     </main>
 
-    <footer>
-        <p>&copy; 2025 Community Fiber. All rights reserved.</p>
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="footer/privacy-policy.html">Privacy Policy</a>
+                <a href="footer/terms-of-service.html">Terms of Service</a>
+                <a href="footer/acceptable-user-policy.html">Acceptable Use Policy</a>
+            </div>
+            <p>&copy; 2026 Community Fiber. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- Scripts -->
