--- a/public/about.html
+++ b/public/about.html
@@ -37,11 +37,18 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html" class="active">Business</a></li>
+            <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">News</a></li>            
+            <li><a href="about.html" class="active">About</a></li>
             <li><a href="support.html">Support</a></li>
-            <li><a href="speedtest.html">Speed Test</a></li>
+             <li class="dropdown-container">
+                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
+                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
