--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,22 @@
             <span class="logo-text" style="display:none;">Community Fiber</span>
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html" class="active">Business</a></li>
+            <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
+            <li><a href="blog.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
-            <li><a href="speedtest.html">Speed Test</a></li>
+            
+            <!-- Bill Pay Dropdown -->
+            <li class="dropdown-container">
+                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
+                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
@@ -124,9 +133,9 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="/footer/privacy-policy.html">Privacy Policy</a>
-                <a href="/footer/terms-of-service.html">Terms of Service</a>
-                <a href="/footer/acceptable-use-policy.html">Acceptable Use Policy</a>
+                <a href="footer/privacy-policy.html">Privacy Policy</a>
+                <a href="footer/terms-of-service.html">Terms of Service</a>
+                <a href="footer/acceptable-user-policy.html">Acceptable Use Policy</a>
             </div>
             <p>&copy; 2026 Community Fiber. All rights reserved.</p>
         </div>
