--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard | Community Fiber</title>
-    <!-- ... same head content ... -->
     <!-- UPDATED CSP -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
@@ -28,7 +27,7 @@
 </head>
 <body>
 
-    <!-- Login Overlay ... same ... -->
+    <!-- Login Overlay -->
     <div id="login-overlay" class="login-overlay">
         <div class="login-card">
             <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="login-logo">
@@ -55,6 +54,9 @@
                 </button>
                 <button class="nav-item" data-tab="leads">
                     <i class="fa-solid fa-inbox"></i> Leads & Forms
+                </button>
+                <button class="nav-item" data-tab="promotions">
+                    <i class="fa-solid fa-percent"></i> Promotions
                 </button>
                 <button class="nav-item" data-tab="news">
                     <i class="fa-solid fa-newspaper"></i> News & Updates
@@ -93,7 +95,7 @@
         <!-- Main Content -->
         <main class="content-area">
             
-            <!-- Dashboard View ... same ... -->
+            <!-- Dashboard View -->
             <section id="view-dashboard" class="view-section active">
                 <div class="page-header">
                     <h1>Dashboard Overview</h1>
@@ -115,7 +117,39 @@
                 </div>
             </section>
 
-            <!-- Leads View ... same ... -->
+            <!-- Promotions View (NEW) -->
+            <section id="view-promotions" class="view-section">
+                <div class="page-header">
+                    <h1>Save More / Promotions Section</h1>
+                    <p>Manage the content for the "Save More" section on the residential page.</p>
+                </div>
+                <div class="admin-card" style="max-width: 800px;">
+                    <form id="promotions-form">
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Section Title</label>
+                            <input type="text" id="promo-title" name="title" class="form-control" placeholder="e.g. Save More" required>
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Description</label>
+                            <textarea id="promo-description" name="description" class="form-control" rows="3" placeholder="e.g. We're committed to our community..."></textarea>
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Discounts / Offers (One per line)</label>
+                            <textarea id="promo-items" name="items" class="form-control" rows="5" placeholder="$5/mo if you sign up for autopay&#10;$5/mo discount for teachers*"></textarea>
+                            <small style="color: #64748b;">Enter each bullet point on a new line.</small>
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Fine Print</label>
+                            <input type="text" id="promo-finePrint" name="finePrint" class="form-control" placeholder="e.g. *Teacher discount requires valid school ID.">
+                        </div>
+                        <div style="display:flex; justify-content: flex-end;">
+                            <button type="submit" class="btn btn-primary">Save Content</button>
+                        </div>
+                    </form>
+                </div>
+            </section>
+
+            <!-- Leads View -->
             <section id="view-leads" class="view-section">
                 <div class="page-header">
                     <h1>Form Submissions</h1>
@@ -148,7 +182,7 @@
                 </div>
             </section>
 
-            <!-- News View (NEW) -->
+            <!-- News View -->
             <section id="view-news" class="view-section">
                 <div class="page-header">
                     <h1>News & Blog Posts</h1>
@@ -159,7 +193,7 @@
                 </div>
             </section>
 
-            <!-- Plans View ... same ... -->
+            <!-- Plans View -->
             <section id="view-plans" class="view-section">
                 <div class="page-header">
                     <h1>Pricing Plans</h1>
@@ -168,7 +202,7 @@
                 <div id="plans-list" class="cards-grid"></div>
             </section>
 
-            <!-- Install Process View ... same ... -->
+            <!-- Install Process View -->
             <section id="view-install" class="view-section">
                 <div class="page-header">
                     <h1>Fiber Installation Process</h1>
@@ -178,7 +212,7 @@
                 <div id="install-steps-list" class="cards-grid"></div>
             </section>
 
-            <!-- Neighborhoods View ... same ... -->
+            <!-- Neighborhoods View -->
             <section id="view-neighborhoods" class="view-section">
                 <div class="page-header">
                     <h1>Neighborhood Status</h1>
@@ -187,7 +221,7 @@
                 <div id="hoods-list" class="cards-grid"></div>
             </section>
 
-            <!-- Employees View ... same ... -->
+            <!-- Employees View -->
             <section id="view-employees" class="view-section">
                 <div class="page-header">
                     <h1>Our Team</h1>
@@ -196,7 +230,7 @@
                 <div id="employees-list" class="cards-grid"></div>
             </section>
 
-            <!-- Announcements View ... same ... -->
+            <!-- Announcements View -->
             <section id="view-announcements" class="view-section">
                 <div class="page-header">
                     <h1>Announcement Banner</h1>
@@ -228,7 +262,7 @@
                 </div>
             </section>
 
-            <!-- Testimonials View ... same ... -->
+            <!-- Testimonials View -->
             <section id="view-testimonials" class="view-section">
                 <div class="page-header">
                     <h1>Testimonials</h1>
