attempt to make the web navigation work

--- a/public/residential.html
+++ b/public/residential.html
@@ -39,7 +39,8 @@
             <li><a href="residential.html" class="active">Residential</a></li>
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
-            
+                        <li><a href="blog.html">News</a></li>
+
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
             
