--- a/public/support.html
+++ b/public/support.html
@@ -106,6 +106,12 @@
                     <form id="support-form">
                         <input type="hidden" id="topic-input" name="topic">
 
+                        <!-- Anti-Spam Honeypot Field -->
+                        <div class="visual-hidden">
+                            <label for="website-check">Website</label>
+                            <input type="text" id="website-check" name="website_check" tabindex="-1" autocomplete="off">
+                        </div>
+
                         <!-- Contact Info -->
                         <div class="form-grid">
                             <div class="form-group">
