--- a/public/business.html
+++ b/public/business.html
@@ -166,6 +166,12 @@
 
                     <div class="form-card">
                         <form id="business-form">
+                            <!-- Anti-Spam Honeypot Field -->
+                            <div class="visual-hidden">
+                                <label for="website-check">Website</label>
+                                <input type="text" id="website-check" name="website_check" tabindex="-1" autocomplete="off">
+                            </div>
+
                             <div class="form-group">
                                 <label for="business-name">Business Name</label>
                                 <input type="text" id="business-name" class="form-input" required placeholder="Company Inc.">
