fixed mobile dropdown menu and added more admin features

--- a/public/admin.html
+++ b/public/admin.html
@@ -291,6 +291,18 @@
         </div>
     </div>
 
+    <!-- View Lead Modal -->
+    <div id="view-lead-modal" class="modal-overlay">
+        <div class="modal-content" style="width: 600px;">
+            <button class="close-modal-btn view-lead-close">&times;</button>
+            <h2>Submission Details</h2>
+            <div id="view-lead-content" class="modal-fields" style="max-height: 70vh; overflow-y: auto;"></div>
+            <div class="modal-actions">
+                <button type="button" class="btn btn-outline view-lead-close">Close</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="assets/js/admin.js"></script>
 </body>
 </html>
