--- a/public/blog.html
+++ b/public/blog.html
@@ -91,7 +91,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/blog.js"></script>
+<script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/blog.js"></script>
+
     <script type="module" src="assets/js/announcement.js"></script>
     <script type="module" src="assets/js/traffic-logger.js"></script>
 </body>
