--- a/public/builders.html
+++ b/public/builders.html
@@ -204,8 +204,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/builders.js"></script>
-        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+    <script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/builders.js"></script>
+<script type="module" src="assets/js/traffic-logger.js"></script>
 
 </body>
 </html>
