--- a/public/business.html
+++ b/public/business.html
@@ -225,8 +225,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/business.js"></script>
-        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+<script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/business.js"></script>
+<script type="module" src="assets/js/traffic-logger.js"></script>
 
 </body>
 </html>
