--- a/public/residential.html
+++ b/public/residential.html
@@ -156,6 +156,8 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/residential.js"></script>
+    <script type="module" src="assets/js/main.js"></script> 
+
     <script type="module" src="assets/js/announcement.js"></script>
     <script type="module" src="assets/js/traffic-logger.js"></script>
 </body>
