--- a/public/support.html
+++ b/public/support.html
@@ -189,8 +189,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/support.js"></script>
-        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+<script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/support.js"></script>
+<script type="module" src="assets/js/traffic-logger.js"></script>
 
 </body>
 </html>
