added faq and taable

--- a/public/builders.html
+++ b/public/builders.html
@@ -108,25 +108,44 @@
 
         <div class="container">
             <!-- Benefits Grid -->
-            <section class="benefits-section fade-in-section">
-                <div class="benefits-grid">
-                    <div class="benefit-card">
-                        <div class="icon-box"><i class="fa-solid fa-hard-hat"></i></div>
-                        <h3>Build as Utility</h3>
-                        <p>We treat fiber like power or water. We install conduit and fiber infrastructure underground during the initial utility trenching phase, minimizing disruption and cost.</p>
-                    </div>
-                    <div class="benefit-card">
-                        <div class="icon-box"><i class="fa-solid fa-file-contract"></i></div>
-                        <h3>Exclusivity & Revenue</h3>
-                        <p>Gain competitive advantages with exclusive service agreements. We offer attractive pricing models and revenue sharing opportunities for qualifying developments.</p>
-                    </div>
-                    <div class="benefit-card">
-                        <div class="icon-box"><i class="fa-solid fa-house-signal"></i></div>
-                        <h3>Day 1 Connectivity</h3>
-                        <p>Don't make residents wait for internet. Our pre-installed ONTs ensure homeowners have active, gigabit internet the moment they move in.</p>
-                    </div>
+         <section class="benefits-section fade-in-section">
+    <div class="benefits-grid">
+        
+        <div class="benefit-card" data-step="01">
+            <div class="card-content">
+                <div class="icon-box">
+                    <i class="fa-solid fa-hard-hat"></i>
                 </div>
-            </section>
+                <h3>Build as Utility</h3>
+                <p>We treat fiber like power or water. We install conduit and infrastructure during the initial trenching phase, minimizing disruption.</p>
+            </div>
+            <div class="card-border"></div>
+        </div>
+
+        <div class="benefit-card" data-step="02">
+            <div class="card-content">
+                <div class="icon-box">
+                    <i class="fa-solid fa-file-contract"></i>
+                </div>
+                <h3>Exclusivity & Revenue</h3>
+                <p>Gain competitive advantages with exclusive service agreements and attractive revenue sharing opportunities for qualifying sites.</p>
+            </div>
+            <div class="card-border"></div>
+        </div>
+
+        <div class="benefit-card" data-step="03">
+            <div class="card-content">
+                <div class="icon-box">
+                    <i class="fa-solid fa-house-signal"></i>
+                </div>
+                <h3>Day 1 Connectivity</h3>
+                <p>Don't make residents wait. Our pre-installed ONTs ensure homeowners have active, gigabit internet the moment they move in.</p>
+            </div>
+            <div class="card-border"></div>
+        </div>
+
+    </div>
+</section>
 
             <!-- Partnership Form -->
             <section class="inquiry-section fade-in-section">
