--- a/public/support.html
+++ b/public/support.html
@@ -181,7 +181,231 @@
                 <button class="btn btn-outline" onclick="location.reload()">Return to Support</button>
             </div>
 
-        </div>
+            <!-- Comparison Table Section -->
+            <section class="comparison-section fade-in-section">
+                <h2>Why Move to Fiber?</h2>
+                <div class="table-wrapper">
+                    <table class="comparison-table">
+                        <thead>
+                            <tr>
+                                <th>Feature</th>
+                                <th class="highlight-col">Community Fiber</th>
+                                <th>Traditional Cable</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Download Speed</td>
+                                <td>Up to 1,000 Mbps (1 Gig)</td>
+                                <td>Varies; often slower during peak hours</td>
+                            </tr>
+                            <tr>
+                                <td>Upload Speed</td>
+                                <td>Symmetrical (Same as download)</td>
+                                <td>Typically 10x–20x slower than download</td>
+                            </tr>
+                            <tr>
+                                <td>Technology</td>
+                                <td>Advanced Light-Based Glass Fiber</td>
+                                <td>Aging Copper Coax Cable</td>
+                            </tr>
+                            <tr>
+                                <td>Reliability</td>
+                                <td>Weather-resistant & stable</td>
+                                <td>Prone to interference and outages</td>
+                            </tr>
+                            <tr>
+                                <td>Gaming & Video</td>
+                                <td>Ultra-low latency (No lag)</td>
+                                <td>Higher latency (Buffering/jitter)</td>
+                            </tr>
+                            <tr>
+                                <td>Contracts</td>
+                                <td>No Contracts</td>
+                                <td>Often requires 1–2 year commitment</td>
+                            </tr>
+                            <tr>
+                                <td>Pricing</td>
+                                <td>No "Promo" traps or hidden fees</td>
+                                <td>Prices often jump $20+ after year one</td>
+                            </tr>
+                            <tr>
+                                <td>Data Caps</td>
+                                <td>Truly Unlimited</td>
+                                <td>Often capped with overage charges</td>
+                            </tr>
+                            <tr>
+                                <td>Support</td>
+                                <td>Local neighbors in New Paris</td>
+                                <td>Large, impersonal call centers</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <!-- FAQ Section -->
+            <section class="faq-section fade-in-section">
+                <h2>Frequently Asked Questions</h2>
+
+                <div class="faq-category">
+                    <h3>Sales & Availability</h3>
+                    <details class="faq-item">
+                        <summary>Is fiber actually available at my address yet?</summary>
+                        <div class="faq-content">
+                            <p>You can check your specific address in seconds right here: <a href="index.html">Check Availability</a>.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Do I have to sign a long-term contract?</summary>
+                        <div class="faq-content">
+                            <p>No. Unlike the big providers, we don’t believe in trapping you. No contracts are required for any of our speed tiers.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Are there any data caps or overage fees?</summary>
+                        <div class="faq-content">
+                            <p>Never. Enjoy truly unlimited data without worrying about caps or surprise fees.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Does the price go up after the first year?</summary>
+                        <div class="faq-content">
+                            <p>No. We don’t do "introductory" or "promo" pricing that skyrockets after 12 months. Your rate stays steady.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>How is this different from the cable internet I already have?</summary>
+                        <div class="faq-content">
+                            <p>Fiber uses light-based technology, making it up to 20x faster and far more reliable than old copper cable. You get symmetrical speeds (uploading is just as fast as downloading), lower latency for gaming/video calls, and a connection that is much more durable against the elements.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Do you offer a price-for-life guarantee?</summary>
+                        <div class="faq-content">
+                            <p>While we don't offer a "for-life" guarantee, our track record speaks for itself. If our rates ever do change, it will be to your benefit!</p>
+                        </div>
+                    </details>
+                </div>
+
+                <div class="faq-category">
+                    <h3>Installation & Setup</h3>
+                    <details class="faq-item">
+                        <summary>Will you have to dig up my yard to install the line?</summary>
+                        <div class="faq-content">
+                            <p>Yes, fiber lines are buried to protect them from the weather and yard work. We use a minimally invasive process, and our construction team will fully restore any area affected by the installation.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>How long does the installation take?</summary>
+                        <div class="faq-content">
+                            <p>A typical installation takes about one hour, depending on the layout of your home.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Do I need to be home for the installation?</summary>
+                        <div class="faq-content">
+                            <p>Yes. Our technician needs access to set up your eero mesh network and ensure your Wi-Fi reaches every corner of your home.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Does the technician need to enter my house?</summary>
+                        <div class="faq-content">
+                            <p>Yes. The fiber line must enter the home, and we perform speed tests in various rooms to ensure your eero network is performing perfectly.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Is there an installation fee?</summary>
+                        <div class="faq-content">
+                            <p>There is a one-time installation fee ranging from $25 to $150, depending on the distance from the road. If fiber has already been run to your home, the installation fee is waived, and only a $25 activation fee applies.</p>
+                        </div>
+                    </details>
+                </div>
+
+                <div class="faq-category">
+                    <h3>Equipment & Hardware</h3>
+                    <details class="faq-item">
+                        <summary>Do I need to rent a modem/router from you, or can I use my own?</summary>
+                        <div class="faq-content">
+                            <p>We provide the equipment without a monthly rental fee. The hardware remains the property of Community Fiber and will be collected if you ever disconnect service.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Is the Wi-Fi equipment included in the monthly price?</summary>
+                        <div class="faq-content">
+                            <p>The Wi-Fi equipment is a one-time fee included on your first bill.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Will your router cover my whole house, or do I need extenders?</summary>
+                        <div class="faq-content">
+                            <p>Coverage depends on the size and construction of your home. Our installation team will evaluate your layout during their visit to ensure you have the coverage you need.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>What happens to the equipment if I move or cancel service?</summary>
+                        <div class="faq-content">
+                            <p>All equipment should remain at the property if you move or cancel service.</p>
+                        </div>
+                    </details>
+                </div>
+
+                <div class="faq-category">
+                    <h3>Speed & Performance</h3>
+                    <details class="faq-item">
+                        <summary>Are the upload speeds the same as the download speeds?</summary>
+                        <div class="faq-content">
+                            <p>Yes! This is one of the best parts of fiber. You get symmetrical speeds, meaning your uploads are just as fast as your downloads.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Will my speed slow down in the evenings when everyone is online?</summary>
+                        <div class="faq-content">
+                            <p>No. Unlike cable, fiber doesn't suffer from "neighborhood slowdowns." You only experience a dip if your total household usage exceeds the specific Mbps plan you've chosen.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Is this good for gaming or streaming 4K?</summary>
+                        <div class="faq-content">
+                            <p>It’s the gold standard. Fiber offers the lowest latency for gaming and the smoothest experience for 4K streaming.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>What is the difference between 200 Mbps and 1 Gig plans? Which one do I need?</summary>
+                        <div class="faq-content">
+                            <p>It depends on your lifestyle. 200 Mbps is great for average households streaming on a few devices. 1 Gig is ideal for large families, professional creators, or heavy gamers who want near-instant downloads.</p>
+                        </div>
+                    </details>
+                </div>
+
+                <div class="faq-category">
+                    <h3>Support & Billing</h3>
+                    <details class="faq-item">
+                        <summary>How do I pay my bill? Is there an autopay discount?</summary>
+                        <div class="faq-content">
+                            <p>You can pay through our <a href="https://nptel.smarthub.coop/Login.html" target="_blank">SmartHub portal</a>. Setting up autopay there earns you a $5/month discount! You can also mail a check to PO Box 47, New Paris, IN 46553, or stop by our office at 19066 County Road 46—we’d love to see you!</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>What happens if my internet goes down? How fast do you fix it?</summary>
+                        <div class="faq-content">
+                            <p>We pride ourselves on reliability. In the rare event of an outage, downtime is typically minimized to 4–5 hours depending on the scale of the issue.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Is there a cancellation fee if I leave?</summary>
+                        <div class="faq-content">
+                            <p>No. We believe our service speaks for itself—there are no fees for leaving.</p>
+                        </div>
+                    </details>
+                    <details class="faq-item">
+                        <summary>Do you have local customer support, or is it a call center?</summary>
+                        <div class="faq-content">
+                            <p>You’ll talk to real people who live right here in your community—maybe even your neighbors! You can reach us locally at 574.831.2176.</p>
+                        </div>
+                    </details>
+                </div>
+            </section>
     </main>
 
     <footer>
@@ -190,7 +414,4 @@
 
     <!-- Scripts -->
 <script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/support.js"></script>
-<script type="module" src="assets/js/traffic-logger.js"></script>
-
-</body>
-</html>
+<script type="module" src="assets/js/traffic-logger.js"></script>   
