--- a/public/business.html
+++ b/public/business.html
@@ -13,7 +13,7 @@
                    font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com; 
                    img-src 'self' data: https://maps.gstatic.com https://lh3.googleusercontent.com; 
                    frame-src https://www.google.com https://accounts.google.com/ https://content-firebaseappcheck.googleapis.com;
-                   connect-src 'self' https://firestore.googleapis.com https://www.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com;">
+                   connect-src 'self' https://www.gstatic.com https://firestore.googleapis.com https://www.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com;">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,7 +69,7 @@
             </div>
             
             <div class="logo-ribbon">
-                <div class="logo-track">
+                <div class="logo-track" id="logo-track">
                     <!-- Original Set of 10 -->
                     <div class="logo-slide"><img src="assets/images/1.png" alt="Partner 1"></div>
                     <div class="logo-slide"><img src="assets/images/2.png" alt="Partner 2"></div>
