trying to add standardized header

--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,8 @@
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/announcement.js"></script>
+    <script src="assets/js/standard-header.js"></script>
+
     <script type="module" src="assets/js/traffic-logger.js"></script> 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBw8z2IL4dN5oldPzRW3a581mkXC7VuXe4&libraries=places&callback=initAutocomplete&loading=async" async defer></script>
 </body>
