--- a/public/residential.html
+++ b/public/residential.html
@@ -157,6 +157,7 @@
     <!-- Scripts -->
     <script type="module" src="assets/js/residential.js"></script>
     <script type="module" src="assets/js/main.js"></script> 
+    <script src="assets/js/standard-header.js"></script>
 
     <script type="module" src="assets/js/announcement.js"></script>
     <script type="module" src="assets/js/traffic-logger.js"></script>
