--- a/public/about.html
+++ b/public/about.html
@@ -241,6 +241,8 @@
     </footer>
 
     <!-- Scripts -->
+         <script src="assets/js/standard-header.js"></script>
+
     <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/announcement.js"></script>
     <script type="module" src="assets/js/traffic-logger.js"></script>
