--- a/public/builders.html
+++ b/public/builders.html
@@ -223,6 +223,8 @@
     </footer>
 
     <!-- Scripts -->
+         <script src="assets/js/standard-header.js"></script>
+
     <script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/builders.js"></script>
 <script type="module" src="assets/js/traffic-logger.js"></script>
 
