--- a/public/business.html
+++ b/public/business.html
@@ -227,6 +227,8 @@
     <!-- Scripts -->
 <script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/business.js"></script>
 <script type="module" src="assets/js/traffic-logger.js"></script>
+    <script src="assets/js/standard-header.js"></script>
+
 
 </body>
 </html>
