--- a/public/support.html
+++ b/public/support.html
@@ -428,5 +428,7 @@
     </footer>
 
     <!-- Scripts -->
+         <script src="assets/js/standard-header.js"></script>
+
 <script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/support.js"></script>
 <script type="module" src="assets/js/traffic-logger.js"></script>   
