--- a/public/business.html
+++ b/public/business.html
@@ -28,30 +28,9 @@
 </head>
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar">
-          <a href="index.html" class="logo-container">
-            <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-            <span class="logo-text" style="display:none;">Community Fiber</span>
-        </a>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html" class="active">Business</a></li>
-            <li><a href="builders.html">Builders</a></li>
-            <li><a href="blog.html">News</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="support.html">Support</a></li>
-                        <li class="dropdown-container">
-                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
-                <ul class="dropdown-menu">
-                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
-                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
-                </ul>
-            </li>
-        </ul>
-        <div class="mobile-menu-btn">☰</div>
-    </nav>
+    <!-- Standard Header Placeholder -->
+    <div id="master-header"></div>
+
     <!-- Hero Header -->
     <header class="business-hero">
         <div class="container hero-content">
@@ -225,10 +204,9 @@
     </footer>
 
     <!-- Scripts -->
-<script type="module" src="assets/js/main.js"></script> <script type="module" src="assets/js/business.js"></script>
-<script type="module" src="assets/js/traffic-logger.js"></script>
     <script src="assets/js/standard-header.js"></script>
-
-
+    <script type="module" src="assets/js/main.js"></script> 
+    <script type="module" src="assets/js/business.js"></script>
+    <script type="module" src="assets/js/traffic-logger.js"></script>
 </body>
 </html>
