--- a/public/residential.html
+++ b/public/residential.html
@@ -28,33 +28,8 @@
 </head>
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar">
-          <a href="index.html" class="logo-container">
-            <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-            <span class="logo-text" style="display:none;">Community Fiber</span>
-        </a>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="residential.html" class="active">Residential</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="builders.html">Builders</a></li>
-                        <li><a href="blog.html">News</a></li>
-
-            <li><a href="about.html">About</a></li>
-            <li><a href="support.html">Support</a></li>
-            
-             <!-- Bill Pay Dropdown -->
-             <li class="dropdown-container">
-                <a href="#" class="dropdown-toggle btn-nav-highlight">Bill Pay</a>
-                <ul class="dropdown-menu">
-                    <li><a href="https://nptel.smarthub.coop/Login.html" target="_blank"><i class="fa-solid fa-lock" style="margin-right:8px;"></i> Login</a></li>
-                    <li><a href="https://nptel.smarthub.coop/PayNow.html" target="_blank"><i class="fa-solid fa-bolt" style="margin-right:8px;"></i> Quick Pay</a></li>
-                </ul>
-            </li>
-        </ul>
-        <div class="mobile-menu-btn">☰</div>
-    </nav>
+    <!-- Standard Header Placeholder -->
+    <div id="master-header"></div>
     
     <!-- Main Content Wrapper -->
     <main class="plans-wrapper">
@@ -155,9 +130,9 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="assets/js/standard-header.js"></script>
     <script type="module" src="assets/js/residential.js"></script>
     <script type="module" src="assets/js/main.js"></script> 
-    <script src="assets/js/standard-header.js"></script>
 
     <script type="module" src="assets/js/announcement.js"></script>
     <script type="module" src="assets/js/traffic-logger.js"></script>
